# mano-backend

./: Cargo.toml  Dockerfile  Makefile  Note App.postman_collection.json  README.md  admin  clean_up.sql  connect.sh  run.sh  skills.sh  tests.sh  todo
.sqlx/: query-17cd7e300cc7bae161992dfdabee6c62c7641e6d65925016847004fb5f164b3b.json  query-8b54d14849b83fcb6d5819060c86a8beb4b6f4d83d5ce3afdf043244044fa0a4.json  query-a24bd2f10d477a2fa65130b6c477d72d04c71c8489f36eb2e8f8c56748b6b34f.json  query-d9a53493f425fa3f8abb54abde556b187fb9e5af37f472a17021eb6ebe96f6b3.json  query-e065908c057489b2f17dce85efb1ba250ce599f9f1778866b4a321588f352ce0.json
migrations/: 20241005154745_init.up.sql  20241006102825_add_verified.down.sql  20241006102825_add_verified.up.sql  20241006114535_pre_registered.down.sql  20241006114535_pre_registered.up.sql  20241006170419_user_sessions.up.sql  20241006190115_reset_password.down.sql  20241006190115_reset_password.up.sql  20241007190445_first_last_name.down.sql  20241007190445_first_last_name.up.sql  20241009095443_profile.down.sql  20241009095443_profile.up.sql  20241010073802_profiles.up.sql  20241010102302_photos.down.sql  20241013131803_ratings.down.sql  20241013131803_ratings.up.sql  20241013181009_admin.down.sql  20241013181009_admin.up.sql  20241025120813_viewers.down.sql  20241025120813_viewers.up.sql  20241025120845_pre_registered.down.sql  20241025120845_pre_registered.up.sql  20241025121103_user_sessions.down.sql  20241025121103_user_sessions.up.sql  20241025121350_reset_password.down.sql  20241025121350_reset_password.up.sql  20241025121709_profiles.up.sql  20241025121748_photos.down.sql  20241025125037_skills.up.sql  20250311205031_crafts.down.sql  20250311205031_crafts.up.sql  (+11 more)
(+15 files in other folders)
