[package]
name = "mano"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = [
    "macros",
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "limit"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lettre = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
thiserror = "1.0.61"
urlencoding = "2.1.3"
base64 = "0.22.1"
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
